--- a/fe/css/custom/home.css
+++ b/fe/css/custom/home.css
@@ -71,3 +71,18 @@ section {
 }
 
 /*  */
+body {
+  background: #f5f5f5;
+  margin-top: 20px;
+}
+.project-info-box {
+  margin: 15px 0;
+  background-color: #fff;
+  padding: 30px 40px;
+  border-radius: 5px;
+}
+.project-info-box p {
+  margin-bottom: 15px;
+  padding-bottom: 15px;
+  border-bottom: 1px solid #d5dadb;
+}
