--- a/fe/css/custom/home.css
+++ b/fe/css/custom/home.css
@@ -86,3 +86,7 @@ body {
   padding-bottom: 15px;
   border-bottom: 1px solid #d5dadb;
 }
+.ul li {
+  list-style: none;
+  text-decoration: none;
+}
